--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ main {
     position: absolute;
     height: 100vh;
     width: 100%;
-    background: url(bg.png) no-repeat center;
+    background: url('bg.png') no-repeat center;
 }
 
 .cover {
@@ -16,14 +16,15 @@ main {
     flex-direction: column;
     height: 100%;
     width: 100%;
-    background-color: #a3373775;
+    background-color: #782e2e75;
+    
 }
 
 .card {
     position: relative;
     margin-top: 20px;
-    width: 190px;
-    height: 200px;
+    width: 250px;
+    height: 295px;
     background: #c3b6af;
     display: flex;
     place-content: center;
