--- a/style.css
+++ b/style.css
@@ -22,14 +22,15 @@ main {
 
 .card {
     position: relative;
-    margin-top: 25px;
+    margin-top: 20px;
     width: 250px;
-    height: 300px;
+    height: 350px;
     background: #c3b6af;
     display: flex;
     place-content: center;
     place-items: center;
     overflow: hidden;
+    justify-content: center;
     border-radius: 25px;
 }
 
@@ -38,8 +39,8 @@ main {
     position: absolute;
     width: 100px;
     height: 130%;
-    background-image: linear-gradient(180deg, rgb(0, 183,255),
-    rgb(255, 48, 255));
+    background-image: linear-gradient(180deg, rgb(238, 255, 0),
+    rgb(255, 86, 48));
     animation: anim 3s linear infinite;
     transition: all 0.2s linear;
 }
