--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     margin: 0;
 }
 
-main {
+.main {
     position: absolute;
     height: 100vh;
     width: 100%;
@@ -16,22 +16,20 @@ main {
     flex-direction: column;
     height: 100%;
     width: 100%;
-    background-color: #782e2e75;
-    
+    background-color: #661d1d75;
 }
 
 .card {
     position: relative;
     margin-top: 20px;
-    width: 250px;
-    height: 350px;
+    width: 190px;
+    height: 200px;
     background: #c3b6af;
     display: flex;
     place-content: center;
     place-items: center;
     overflow: hidden;
-    justify-content: center;
-    border-radius: 25px;
+    border-radius: 20px;
 }
 
 .card::before {
@@ -39,8 +37,7 @@ main {
     position: absolute;
     width: 100px;
     height: 130%;
-    background-image: linear-gradient(180deg, rgb(238, 255, 0),
-    rgb(255, 86, 48));
+    background-image: linear-gradient(180deg, rgb(164, 48, 44), rgb(87, 192, 17));
     animation: anim 3s linear infinite;
     transition: all 0.2s linear;
 }
@@ -75,18 +72,18 @@ p {
     letter-spacing: 2px;
     text-align: center;
     color: #fff;
-    margin-left: 20px;
-    text-shadow: 2px 1px 1px #a60909,
-    -1px -1px 1px #07182e 1px -2px 1px #a60909;
+    margin-bottom: 20px;
+    text-shadow: 2px 1px 1px #ff0101,
+    -1px -1px 1px #000, 1px -2px 1px #ff0101;
 }
 
 .cancel {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: red;
+    background-color: #524b4b;
     height: 100vh;
-    width:  100%;
+    width: 100%;
 }
 
 h2 {
@@ -94,8 +91,7 @@ h2 {
     text-align: center;
     color: #fff;
     font-size: 7rem;
-    text-shadow: 2px 1px 1px red,
-    -1px -1px 1px #07182e;
+    text-shadow: 2px 1px 1px #ff0101, -1px -1px 1px #000;
     letter-spacing: 2px;
     word-spacing: 5px;
 }
